[gd_scene load_steps=2 format=3 uid="uid://c6h5mqq4rwf27"]

[ext_resource type="Script" uid="uid://dsckn0t5cbta8" path="res://tic_tac_toe.gd" id="1_7swow"]

[node name="TicTacToe" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7swow")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -154.0
offset_right = 154.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Button" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button7" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button8" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button9" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -89.0
offset_top = -182.0
offset_right = 95.0
offset_bottom = -159.0
text = "Welcome to Tic Tac Toe!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputShield" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="InputShield"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.152941, 0.85098)

[node name="RestartButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -291.0
offset_top = 175.0
offset_right = -145.0
offset_bottom = 215.0
scale = Vector2(2, 2)
text = "Restart Game?"

[node name="MenuButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = 175.0
offset_right = 158.0
offset_bottom = 215.0
scale = Vector2(2, 2)
text = "Main Menu"
